fixed a few bugs for height and group task scrollbar functionality

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -11,7 +11,7 @@ body {
   }
   
   #brainDump {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
   }
   
   #taskInput {
